--- a/src/components/oneVideoDetails/videoDetails.css
+++ b/src/components/oneVideoDetails/videoDetails.css
@@ -16,7 +16,7 @@ video-details__video {
 
 .video-details__descr {
   display: flex;
-  justify-content: space-between;
+  gap: 50%;
 }
 
 .video-details__user {
@@ -38,13 +38,108 @@ video-details__video {
   font-family: "Roboto", sans-serif;
 }
 
+/* likes */
+
 .video-details__likes {
+  display: flex;
+  align-items: center;
+  background-color: #272728;
+  border-radius: 20px;
 }
 
 .like-div {
-  position: relative;
+  padding-left: 2vh;
+  height: 6vh;
+  cursor: pointer;
+  background-color: #272728;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  gap: 2vh;
+}
+
+.like-div:hover {
+  background-color: #525252;
+  transition: 0.2s;
+}
+
+.dislike-div {
+  padding-right: 1vh;
+  cursor: pointer;
+  background-color: #272728;
+  display: flex;
+  align-items: center;
+  width: 7vh;
+  justify-content: center;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+.dislike-div:hover {
+  background-color: #525252;
+  transition: 0.2s;
 }
 .like-svg {
-  width: 70px !important;
-  height: 70px !important;
+  width: 25px;
+  height: 40px;
 }
+
+.dislike-svg {
+  width: 25px;
+  height: 40px;
+}
+
+.likes-count {
+  padding-right: 2vh;
+  font-size: 14px;
+  letter-spacing: 2px;
+}
+
+.like-square {
+  height: 3vh;
+  background-color: #525252;
+  width: 1px;
+}
+
+/* description start */
+.video-details__descr-bottom {
+  display: flex;
+  flex-direction: column;
+  background-color: #272727;
+  border-radius: 15px;
+  padding: 1.5%;
+  margin: 2% 0;
+  font-family: "Roboto", "Arial", sans-serif;
+  cursor: pointer;
+  transition: 0.1s;
+}
+
+.video-details__descr-bottom:hover {
+  background-color: #343434;
+  transition: 0.1s;
+}
+
+.video-details__descr-bottom_views {
+  display: flex;
+  gap: 1.5%;
+  margin: 0;
+  margin-bottom: 1%;
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+
+.video-details__descr-bottom_views > p {
+  margin: 0;
+}
+
+.video-details__descr-bottom_description {
+}
+
+.video-details__descr-bottom_description > p {
+  margin: 0;
+  font-size: 0.9rem;
+  font-weight: 400;
+}
+/* description end */
