description and watch-later fixed

--- a/src/components/oneVideoDetails/videoListCard.css
+++ b/src/components/oneVideoDetails/videoListCard.css
@@ -3,17 +3,18 @@
   display: flex;
   margin: 2% 0;
   cursor: pointer;
-  transition: 0.2s;
+  gap: 2.5%;
+  transition: 0.4s;
 }
 
 .video-list-card:hover {
   transform: scale(0.9);
-  transition: 0.2s;
+  transition: 0.4s;
 }
 
 .video-list-card__img {
   width: 165px;
-  border-radius: 10px;
+  border-radius: 7px;
 }
 
 .video-list-card__info {
@@ -21,21 +22,30 @@
   flex-direction: column;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
-  margin-left: 3%;
+  gap: 7%;
+  width: 100%;
 }
 .video-list-card__title {
-  margin: 8px 0 6px;
   font-size: 14px;
   line-height: 20px;
+  margin: 0 0 0.5%;
 }
+
 .video-list-card__username {
-  margin: 2px 0 5px;
   color: #aaaaaa;
   font-size: 12px;
+  margin: 0;
 }
-.video-list-card__date {
-  justify-self: end;
-  margin: 2px 0 0;
+
+.video-list-card__bottom {
+  margin: 0;
+  display: flex;
+  gap: 1%;
   color: #aaaaaa;
   font-size: 12px;
+  width: 100%;
+}
+
+.video-list-card__bottom > p {
+  margin: 0;
 }
