--- a/src/components/oneVideoDetails/videoDetails.css
+++ b/src/components/oneVideoDetails/videoDetails.css
@@ -6,8 +6,11 @@
 .video-details__main {
   width: 65%;
 }
-video-details__video {
+
+.video-details__video {
+  border-radius: 10px;
 }
+
 .video-details__title {
   font-size: 20px;
   font-weight: 600;
@@ -128,18 +131,24 @@ video-details__video {
   margin-bottom: 1%;
   font-size: 0.9rem;
   font-weight: 500;
+  cursor: default;
 }
 
 .video-details__descr-bottom_views > p {
   margin: 0;
 }
 
-.video-details__descr-bottom_description {
-}
-
-.video-details__descr-bottom_description > p {
+.video-details__descr-bottom_description-p {
   margin: 0;
   font-size: 0.9rem;
   font-weight: 400;
+  cursor: default;
+}
+
+.video-details__descr-bottom_description-close {
+  font-size: 0.9rem;
+  font-weight: 400;
+  cursor: pointer;
+  margin-bottom: 0;
 }
 /* description end */
