--- a/src/components/Videos/videoCard.css
+++ b/src/components/Videos/videoCard.css
@@ -103,6 +103,12 @@
   width: 28px;
   height: 28px;
   cursor: pointer;
+  transition: 0.3s;
+
+  &:hover {
+    transform: scale(1.2);
+    transition: 0.3s;
+  }
 }
 
 .video-card__edit-svg {
@@ -110,4 +116,10 @@
   height: 28px;
   cursor: pointer;
   margin-right: 3%;
+  transition: 0.3s;
+
+  &:hover {
+    transform: scale(1.2);
+    transition: 0.3s;
+  }
 }
